--- a/css/style.css
+++ b/css/style.css
@@ -1258,140 +1258,121 @@ p{
     }
     
 
-    /* Menu Hamburguesa*/
-    
-    #menuToggle
-    {
-      display: block;
-      position: relative;
-      top: 10px;
-      left: 10px;
-      z-index: 1;
-      -webkit-user-select: none;
-      user-select: none;
-      background: white;
-      padding: 0px;
-      //width: 58px;
-      width: 45px;
-      height: 58px;
-    }
-    .hamburguesa{
-      padding: 21px 11px;
-    }
-    #menuToggle input
-    {
-      display: block;
-      width: 40px;
-      height: 32px;
-      position: absolute;
-      top: -7px;
-      left: -5px;
-      
-      cursor: pointer;
-      
-      opacity: 0; /* hide this */
-      z-index: 2; /* and place it over the hamburger */
-      
-      -webkit-touch-callout: none;
+    /* Menu Hamburguesa */
+    @keyframes zoom {
+      0%, 100% { transform: scale(1);}
+      50% { transform: scale(1.1);}
     }
 
-    /*
-     * Just a quick hamburger
-     */
-    #menuToggle span
-    {
-      display: block;
-      width: 22px;
-      height: 3px;
-      margin-bottom: 4px;
-      position: relative;
-      
-      background: #292B32;
-      border-radius: 3px;
-      
-      z-index: 1;
-      
-      transform-origin: 4px 0px;
-      
-      transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-                  background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-                  opacity 0.55s ease;
-    }
-
-    #menuToggle span:first-child
-    {
-      transform-origin: 0% 0%;
-    }
-
-    #menuToggle span:nth-last-child(2)
-    {
-      transform-origin: 0% 100%;
-    }
-
-    /* 
-     * Transform all the slices of hamburger
-     * into a crossmark.
-     */
-    #menuToggle input:checked ~ span
-    {
-      opacity: 1;
-      transform: rotate(45deg) translate(-2px, -1px);
-      background: #232323;
-    }
-
-    /*
-     * But let's hide the middle one.
-     */
-    #menuToggle input:checked ~ span:nth-last-child(3)
-    {
-      opacity: 0;
-      transform: rotate(0deg) scale(0.2, 0.2);
-    }
-
-    /*
-     * Ohyeah and the last one should go the other direction
-     */
-    #menuToggle input:checked ~ span:nth-last-child(2)
-    {
-      transform: rotate(-45deg) translate(0, -1px);
-    }
-
-    /*
-     * Make this absolute positioned
-     * at the top left of the screen
-     */
-    #menu
-    {
-      position: absolute;
-      width: 100%;
-      margin: -100px 0 0 -10px;
-      padding: 50px;
-      padding-top: 125px;
-      
-      background: #ededed;
-      list-style-type: none;
-      -webkit-font-smoothing: antialiased;
-      /* to stop flickering of text in safari */
-      
-      transform-origin: 0% 0%;
-      transform: translate(-100%, 0);
-      
-      transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
-    }
-
-    #menu li
-    {
-      padding: 10px 0;
-      font-size: 22px;
-    }
-
-    /*
-     * And let's slide it in from the left
-     */
-    #menuToggle input:checked ~ ul
-    {
-      transform: none;
-    }
+  .full-menu {
+    position: fixed;
+    background-color: #292B32;
+    opacity: 0.5;
+    transform: translateX(-100%);
+    transition: all 400ms ease-in;
+    z-index: 999 !important;
+    width: 100%;
+    height: 100%;
+    padding-top: 15%;
+  }
+  .full-menu li {
+    font-size: 24px;
+    color: #fff;
+    opacity: 0;
+    transform: translateY(2%);
+    transition: all 300ms ease-in;
+    cursor: pointer;
+    line-height: 76px;
+    font-weight: 300;
+  }
+  /*.full-menu li:after {
+    content: "";
+    position: absolute;
+    height: 5px;
+    width: 0%;
+    left: 0;
+    bottom: 0;
+    background-color: #fff;
+    transition: width 200ms ease-in;
+    font-weight: bold;
+  }*/
+  .full-menu li:hover:after {
+    width: 100%;
+  }
+  .full-menu ul {
+    list-style: none;
+    text-align: center;
+  }
+  .full-menu.active {
+    transform: translateX(0%);
+    opacity: 1;
+    z-index: 0;
+  }
+  .full-menu.active .introduccio {
+    transition-delay: 0.3s;
+  }
+  .full-menu.active .presentacio {
+    transition-delay: 0.4s;
+  }
+  .full-menu.active .epreolimpiques {
+    transition-delay: 0.5s;
+  }
+  .full-menu.active .eolimpiques {
+    transition-delay: 0.6s;
+  }
+  .full-menu.active .arreudelmon {
+    transition-delay: 0.7s;
+  }
+  .full-menu.active .emprempta {
+    transition-delay: 0.8s;
+  }
+  .full-menu.active li {
+    opacity: 1;
+    transform: translateX(0%);
+  }
+  .full-menu.active li:hover {
+    animation: zoom 200ms ease-in;
+  }
+  
+  #menu li a {
+    color: white;
+  }
+  
+  .hamburguer {
+    position: fixed;
+    /*width: 2em;
+    height: 2em;
+    margin: 3em;*/
+    width: 56px;
+    height: 56px;
+    margin: 0;
+    background: white;
+    z-index: 999 !important;
+    cursor: pointer;
+    padding: 17px 0;
+  }
+  .hamburguer:hover {
+    animation: zoom 300ms ease-in;
+  }
+  .lines {
+    background-color: #000;
+    width: 50%;
+    height: 3px;
+    margin: 3px 13px;
+    transition: all 450ms ease-in;
+  }
+  .close-hamburguer .lines {
+    cursor: pointer;
+  }
+  .close-hamburguer .line-top {
+    transform: translateY(200%) rotate(45deg);
+  }
+  .close-hamburguer .line-mid {
+    opacity: 0;
+  }
+  .close-hamburguer .line-bottom {
+    transform: translateY(-200%) rotate(135deg);
+  }
 
     .p60{
       padding: 60px 0 0 0;
@@ -1400,7 +1381,7 @@ p{
 
 @media only screen and (min-device-width: 768px) 
                    and (max-device-width: 1280px){
-  #menuToggle{
+  .full-menu{
     display: none;
   }
 }
