--- a/css/style_final.css
+++ b/css/style_final.css
@@ -3,6 +3,42 @@ body, html {
     overflow: hidden;
 }
 
+.full-menu {
+    display: none;
+}
+
+.icon,
+.share-button {
+    position: fixed !important;
+}
+
+section {
+    position: relative;
+}
+
+.diapo {
+    position: relative;
+    top: 0%;
+    width: 100%;
+    height:100%;
+}
+.diapo .diapo_container {
+    display: table;
+    table-layout: fixed;
+    width: 100%;
+    height:100%;
+}
+
+.diapo .diapo_container .diapo_content {
+    position: relative;
+    display: table-cell;
+    vertical-align: middle;
+    width: 100%;
+    height: 100%;
+}
+
+/*
+
 .invisible {
     opacity: 0;
 }
@@ -15,28 +51,12 @@ body, html {
     transform: translate3d(0px, 0px, 0px);
 }
 
-.icon,
-.share-button {
-    position: fixed !important;
-}
 
-section {
-    position: relative;
-    display: inline-block;
-    float: left;
-    width: 100%;
-}
-
-.diapo {
-    position: relative;
-    display: inline-block;
-    float: left;
-    width: 100%;
-    height: 100%;
-}
+/*
 
 /* ****************************************************************************************************************** */
 /* ********** Section 1 - ANIMATIONS ******************************************************************************** */
+
 
 section.first .cobi {
     position: absolute;
@@ -52,9 +72,6 @@ section.first .cobi.animated {
     opacity: 1;
 }
 
-section.first .aros {
-    position: relative;
-}
 
 section.first .aros img.rings_all {
     visibility: hidden;
@@ -267,9 +284,9 @@ section.second .diapo.diapo_2.animated {
 section.second .diapo.diapo_2 .buzon {
     position: absolute;
     top: 50%;
-    left: 50%;
+    left: 46%;
     width: 6%;
-    transform: scale(1,1) translateX(-50%) translateY(-50%);
+    transform: scale(1,1) translateX(-46%) translateY(-50%);
     transition: .5s;
     opacity: 0;
 }
@@ -281,6 +298,8 @@ section.second .diapo.diapo_2 .buzon.animated {
 
 section.second .diapo.diapo_2 .sobre {
     position: absolute;
+    transform: scale(0.9, 0.9);
+
 }
 section.second .diapo.diapo_2 .sobre.no-animated {
     bottom: -160%;
@@ -288,7 +307,6 @@ section.second .diapo.diapo_2 .sobre.no-animated {
 
     opacity: 0;
 }
-
 
 
 /* ****************************************************************************************************************** */
