--- a/css/style_final.css
+++ b/css/style_final.css
@@ -440,9 +440,7 @@ section.five .diapo.diapo_1 .image2.animated {
 /* ********** Section 6 - ANIMATIONS ******************************************************************************** */
 
 section.six .diapo.diapo_1.animated,
-section.six .diapo.diapo_2.animated,
-section.six .diapo.diapo_3.animated,
-section.six .diapo.diapo_4.animated {
+section.six .diapo.diapo_2.animated {
     top: -100%;
 }
 
@@ -504,6 +502,54 @@ section.six .diapo.diapo_2 .sello3.animated {
     top: 0%;
     vertical-align: inherit;
     opacity: 1;
+}
+
+section.six .diapo.diapo_3 .sello1.no-animated {
+    position: relative;
+    left: 14%;
+    transform: rotate(3deg);
+}
+
+section.six .diapo.diapo_3 .sello2.no-animated {
+    position: relative;
+    left: -14%;
+    transform: rotate(-3deg);
+}
+
+section.six .diapo.diapo_3 .sello3.no-animated {
+    position: relative;
+    left: 14%;
+    transform: rotate(3deg);
+}
+
+section.six .diapo.diapo_3 .sello4.no-animated {
+    position: relative;
+    left: -14%;
+    transform: rotate(-3deg);
+}
+
+section.six .diapo.diapo_3 .sello1.animated {
+    position: relative;
+    left: 35%;
+    transform: rotate(0deg);
+}
+
+section.six .diapo.diapo_3 .sello2.animated {
+    position: relative;
+    left: -35%;
+    transform: rotate(0deg);
+}
+
+section.six .diapo.diapo_3 .sello3.animated {
+    position: relative;
+    left: 35%;
+    transform: rotate(0deg);
+}
+
+section.six .diapo.diapo_3 .sello4.animated {
+    position: relative;
+    left: -35%;
+    transform: rotate(0deg);
 }
 
 
